# metronome

./: .aider.chat.history.md  .aider.input.history  CLAUDE.md  Cargo.toml  LICENSE  README.md
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
src/: args.rs  audio.rs  main.rs  metronome.rs  state.rs  tap_tempo.rs  ui.rs
src/audio/: mod.rs
src/metronome/: mod.rs
src/ui/: mod.rs
