[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

[rust.lints]
# unused = "allow"

[profile.release]
lto = true
strip = true

[dependencies]
clap = "4.5.17"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29"
rodio = "0.20"
tokio = { version = "1.0", features = ["full"] }
